--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=electronic-queue
+spring.datasource.url=jdbc:postgresql://localhost:5432/electronic_queue
+spring.datasource.username=postgres
+spring.datasource.password=postgresqlsasha
+spring.datasource.driver-class-name=org.postgresql.Driver
+
