--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/electronic_queue
 spring.datasource.username=postgres
 spring.datasource.password=postgresqlsasha
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
 
